# jupyter-cpp-header-template

./: README.md  setup.cfg  setup.py
.github/workflows/: codeql.yml
sample/: sample.hpp
sample/res/: legacy.h  linker.hpp
