[metadata]
description-file = README.md
name = jupyter-cpp-extension-template
version = 1.0.0a5
author = Shiroi Neko
author_email = shiroineko.tfs@gmail.com
description = C++ kernel for Jupyter headers template. Used to provide additional abilities for the kernel.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/shiroinekotfs/jupyter-cpp-header-template
project_urls =
    Bug Tracker = https://github.com/shiroinekotfs/jupyter-cpp-header-template/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: C++
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: POSIX :: Linux
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.8
install_requires = jupyter-cpp-kernel>=1.0.0a5